--- a/src/templates/countriesList.hbs
+++ b/src/templates/countriesList.hbs
@@ -1,6 +1,6 @@
 {{#each this}}
-<li class="country-flag">
-    <img src="{{flag}}" alt="flag of {{name}}" class="flag">
+<li class="country-item">
+    <img src="{{flag}}" alt="flag of {{name}}" class="country-flag">
+    <p class="country-name">{{name}}</p>
 </li>
-<p class="country-name">{{name}}</p>
 {{/each}}
