--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,11 +3,16 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: #fafafa;
-  color: #212121;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+    'Open Sans', 'Helvetica Neue', sans-serif;
+  background: #262626;
+
   line-height: 1.5;
+  height: 100%;
+}
+
+html {
+  height: 100%;
 }
 
 #search-box {
@@ -15,4 +20,68 @@ body {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+}
+
+input {
+  background: #000;
+  color: #fff;
+  border: none;
+  border-radius: 0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  position: relative;
+  border-radius: 3px;
+  cursor: pointer;
+  padding: 0.8em 1.6em;
+  font-size: 18px;
+}
+
+.country-flag {
+  width: 50px;
+}
+
+.country-item {
+  display: flex;
+  align-items: center;
+  list-style: none;
+}
+
+.country-name {
+  margin-left: 10px;
+  font-size: 20px;
+  font-weight: 500;
+  font-style: italic;
+  color: #fff;
+}
+
+.country-item {
+  display: flex;
+  align-items: center;
+}
+
+.card-title {
+  padding: 0;
+  display: flex;
+  align-items: center;
+  font-size: 80px;
+  color: #fff;
+}
+
+.card-text {
+  font-size: 30px;
+  font-weight: 400;
+  margin-top: 20px;
+  color: #fff;
+}
+
+.card-text_title {
+  font-weight: bold;
+  color: #fff;
+}
+
+.card-flag {
+  width: 180px;
+  margin-right: 30px;
+  margin-left: 30px;
 }
